added more functionality
